--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Skatehive V2",
+  "name": "skatehive-v2",
   "version": "0.0.2",
   "description": "Skatehive V2",
   "productName": "Skatehive V2",
@@ -14,15 +14,23 @@
   "dependencies": {
     "@hiveio/dhive": "^1.2.5",
     "@quasar/extras": "^1.0.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dhive-sl": "^2.0.0-prerelease.10",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "marked": "^4.2.12",
     "oh-vue-icons": "^1.0.0-rc3",
+    "os": "^0.1.2",
     "quasar": "^2.6.0",
+    "stream": "^0.0.2",
+    "url": "^0.11.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
