--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
       }
     }
   ],
-  "routes": [	
-    {"src": "/(.*)","dest": "/index.html"}  
+  "routes": [
+    { "handle": "filesystem" },
+    {"src": "/(.*)","dest": "/index.html"}
   ]
 }
