--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "quasar.config.js",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/spa"
