--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "quasar build",
     "deploy": "vercel",
     "vercel-build": "quasar build"
-
   },
   "dependencies": {
     "@hiveio/dhive": "^1.2.5",
@@ -29,6 +27,7 @@
     "quasar": "^2.6.0",
     "stream": "^0.0.2",
     "url": "^0.11.0",
+    "vercel": "^28.18.4",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
@@ -59,7 +58,6 @@
   ],
   "engines": {
     "node": ">= 12.22.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "npm": ">= 6.13.4"
   }
 }
