--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "marked": "^4.2.12",
+    "mavon-editor": "^2.10.4",
     "oh-vue-icons": "^1.0.0-rc3",
     "os": "^0.1.2",
     "quasar": "^2.6.0",
@@ -31,6 +32,7 @@
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
+    "wagmi": "^0.12.10",
     "web3": "^1.9.0"
   },
   "devDependencies": {
