--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hiveio/dhive": "^1.2.5",
     "@quasar/extras": "^1.0.0",
+    "@supabase/supabase-js": "^2.20.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
